<resources>
    <string name="app_name">VoteNote</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kandakov Danil</string>
    <string name="nav_header_subtitle">&#64;kandachkov300</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_polls">Polls</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="title_activity_login">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sign_up_now"><u>Sign up now</u></string>
    <string name="change_password"><u>Change password</u></string>
    <string-array name="subtitles">
        <item>Show the world your opinion</item>
        <item>Share your opinion with the world</item>
        <item>Your choice. Your opinion.</item>
        <item>It is alpha. So, you are alpha-tester.</item>
        <item>It is alpha. Looks like it works, interesting</item>
        <item>It is alpha. Well, it hasnt crash yet</item>
        <item>It is alpha. Beta coming soon</item>
        <item>It is alpha. Thare mey be sam typos</item>
        <item>It is alpha. Contact with developers if you see some bugs</item>
        <item>It is alpha. Look! Its a bug here, try to catch it</item>
        <item>It is alpha. If we paid 1$ per crash, you probably would have a 1kk$</item>
    </string-array>
    <string name="sign_in">Sign In</string>
    <string name="not_a_member">Not a member?</string>
    <string name="problems_logging_in">Problems logging in?</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone">Phone</string>
    <string name="vote">Vote</string>
    <string name="note">Note</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tag">Tag</string>
    <string name="have_an_invitation_code"><u>I have an invite code</u></string>
    <string name="sign_in_now"><u>Sign in now</u></string>
    <string name="logout">Logout</string>
    <string name="menu_auth">Auth</string>
    <string name="invite_code">Invite code</string>
    <string name="title_activity_main">MainActivity</string>
</resources>