<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="32dp"
    android:paddingEnd="24dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@drawable/profile_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/Theme.VoteNote.TextAppearance.Black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Theme.VoteNote.TextAppearance.Gray"
        android:text="@string/nav_header_subtitle" />
</LinearLayout>